--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <div class="card">
+            <div class="title">
+                <h1>Franny's Weather App</h1>
+            </div>
             <div class="search">
                 <input type="text" placeholder="Enter City Name"
                 spellcheck="false">
